peepBtn-results z-index bug fixed

--- a/compass/sass/myStyles.sass
+++ b/compass/sass/myStyles.sass
@@ -58,6 +58,7 @@
 	float: right
 	height: 125px
 	left: 0
+	z-index: 990
 
 .peepBtn-main
 	position: absolute
